# vehicle-pursuit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  main.py  pyproject.toml
.github/workflows/: .unity-build.yml  check.yaml  unity-build.yml  unity-builder.yml
Assets/Materials/: Agent render texture.mat  Deepracer - terrain.mat
Assets/Prefabs/: Agent.prefab  Marker.prefab  Sphere.prefab
Assets/Scenes/: Main.unity  Test.unity
Assets/Scripts/: AgentCar.cs  InferenceEngine.cs  Track.cs  TrackGenerator.cs  TrainingReplicator.cs  Wheel.cs
Assets/Terrain/: Terrain.asset
Assets/Textures/: Agent render texture.renderTexture  Render texture.renderTexture
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  selfdriving_config.yaml
Content/Track/: Black.uasset  MI_BlackTrackEdge.uasset  MI_TrackEdge.uasset  MI_WhiteTrack.uasset  SM_Track.uasset  SM_Track_10M.uasset  Track.glb  White.uasset
ProjectSettings/: ProjectSettings.asset
Python Trainer/: Buffer.py  DataChannel.py  KeyboardListener.py  Network.py  Train.py  Trainer.py  Variables.py  WrapperNet.py  buffer.py  network.py  pokus.ipynb  train.py  trainer.py  variables.py
dataset/t_ref/: 0.npy  1.npy  10.npy  100.npy  1000.npy  1004.npy  1005.npy  1006.npy  1007.npy  1008.npy  101.npy  1014.npy  1015.npy  1016.npy  (+3168 more)
python_trainer/: buffer.py  data_channel.py  get_training_results.ipynb  keyboard_listener.py  network.py  test.py  train.py  trainer.py  variables.py  wrapper_net.py
src/: agent_interface.py  environment_parameters.py  test.py  train.py  variables.py
(+223 files in other folders)
