[project]
name = "vehicle-pursuit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.1"
dependencies = [
    "pre-commit",
    "pynput",
    "matplotlib",
    "numpy",
    "onnx",
    "tqdm",
    "mlagents==1.0.0",
    "mlagents-envs==1.0.0",
    "tensorboard==2.15.1",
    "tensorboard-data-server==0.7.2",
    "torch==2.1.1",
    "scipy==1.10.1",
    "torchvision>=0.16.1",
    "assimp-py>=1.1.0",
    "transformers>=4.54.1",
]

[tool.ruff]
line-length = 100 
target-version = "py312"
fix = true  # Enables auto-fix for formatting issues

[tool.isort]
profile = "black"  # Ensures compatibility with Black's formatting
line_length = 100
